# sdg

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  bsg-scaffolder_readme.md  build.sh  build_tarballs.jl  codecov.yml  doxy2swig.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/sdg/: README.doctree  _sdglib_toc.doctree
.doctrees/sdg/sdglib/: README.doctree
.travis/: build.sh  install.sh
CMakeModules/: CodeCoverage.cmake
_sources/sdg/: README.rst.txt
cmake/: FindPythonModule.cmake  FindR.cmake
doc/: Doxyfile.in
doc/sphinx/: conf.py  index.rst
doc/sphinx/bsg/: LinkageDiGraph.rst  SequenceGraph.rst  _sglib_toc.rst
doc/sphinx/sdg/: README.rst  SequenceDistanceGraph.rst  _sdglib_toc.rst
docs/: Doxyfile  Makefile  conf.py  index.rst
interfaces/: JuliaBSG.cpp  JuliaSDG.cpp  README.md  SDGpython.cc  SequenceDistanceGraph.i.in  SequenceGraph.i  SequenceGraph.i.in
interfaces/python/: __init__.py.in  setup.py.in
interfaces/simple_python/: SDGpython.cc
scripts/: graphcleaning.py  graphstriding.py  graphuntangling.py
sdg/: README.html  _sdglib_toc.html
sdg/sdglib/: README.html
sdg/sdglib/classes/: DistanceGraph.html  LinkView.html  LinkageMaker.html  LinkedReadsMapper.html  LongReadsMapper.html  NodeView.html  PairedReadsMapper.html  SequenceDistanceGraph.html  WorkSpace.html
sdg/sdglib/workspace/: README.html
src/: bsg-datastore.cc  bsg-dbg.cc  bsg-flowmaker.cc  bsg-kmerspectra.cc  bsg-lhapassembler.cc  bsg-lrmapper.cc  bsg-mapper.cc  bsg-testflowfollower.cc  bsg-untangler.cc  bsg-untangler2.cc  bsg-workspace.cc  build_all_backbones.cc  comp_kc.cc  gfa-align.cc  gfa-bfphaser.cc  gfa-dumppath.cc  gfa-exploregraph.cc  gfa-extract.cc  gfa-extract.md  gfa-indexer.cc  gfa-pairscaff.cc  gfa-qc.cc  gfa-set.cc  gfaqc.cc  haplotype_scorer.cpp  haplotype_scorer.h  kmers_tester.cpp  lr-datastore.cc  map-lr.cc  map-lr.md  phaser.cpp  repeat_resolver.cc  resolve-loops.cc  sdg-datastore.cc  sdg-dbg.cc  sdg-kmercounter.cc  sdg-kmercounts.cc  sdg-kmerspectra.cc  sdg-lrmapper.cc  sdg-mapper.cc  (+11 more)
src/sdglib/: README.md  SMR.hpp  Version.hpp
src/sdglib/batch_counter/: BatchKmersCounter.cc  BatchKmersCounter.hpp
src/sdglib/bloom/: BloomFilter.hpp
src/sdglib/datastores/: KmerCounter.cc  KmerCounter.hpp  KmerCounts.cc  KmerCounts.hpp  KmerCountsDatastore.cc  KmerCountsDatastore.hpp  LinkedReadsDatastore.cc  LinkedReadsDatastore.hpp  LongReadsDatastore.cc  LongReadsDatastore.cpp  LongReadsDatastore.hpp  PairedReadsDatastore.cc  PairedReadsDatastore.hpp  PathsDatastore.cc  PathsDatastore.hpp  ReadPathsDatastore.cc  ReadPathsDatastore.hpp  ReadSequenceBuffer.cc  ReadSequenceBuffer.hpp
src/sdglib/factories/: ContigBlockFactory.hpp  KMerCountFactory.hpp  KMerFactory.hpp  KMerIDXFactory.hpp  KmerIterator.h  KmerPosFactory.hpp  Kmers.h  SkipMerFactory.hpp  StrandedMinSketchFactory.cc
src/sdglib/filesystem/: README.md  helpers.cc  helpers.hpp
src/sdglib/graph/: DistanceGraph.cc  DistanceGraph.hpp  ReadThreadsGraph.cc  ReadThreadsGraph.hpp  SequenceDistanceGraph.cc  SequenceDistanceGraph.hpp  SequenceDistanceGraphPath.cc  SequenceDistanceGraphPath.hpp  SequenceGraphPath.cpp  SequenceGraphPath.hpp  SequenceSubGraph.cpp  SequenceSubGraph.hpp
src/sdglib/indexers/: NKmerIndex.cc  NKmerIndex.hpp  SatKmerIndex.cc  SatKmerIndex.hpp  SkipMerIndex.hpp  UniqueKmerIndex.cc  UniqueKmerIndex.hpp
src/sdglib/journal/: OperationJournal.cc  OperationJournal.hpp
src/sdglib/logger/: OutputLog.hpp
src/sdglib/mappers/: GraphSelfAligner.cc  GraphSelfAligner.hpp  LinkedReadMapper.cc  LinkedReadMapper.hpp  LinkedReadsMapper.cc  LinkedReadsMapper.hpp  LongReadMapper.cpp  LongReadMapper.hpp  LongReadsMapper.cc  LongReadsMapper.cpp  LongReadsMapper.hpp  LongReadsRecruiter.cc  LongReadsRecruiter.hpp  PairedReadMapper.cc  PairedReadMapper.hpp  PairedReadsMapper.cc  PairedReadsMapper.hpp  PerfectMatcher.cc  PerfectMatcher.hpp  SequenceMapper.cc  SequenceMapper.hpp  SingleReadMapper.cpp  SingleReadMapper.hpp
src/sdglib/processors/: CountFilter.cc  CountFilter.hpp  GraphContigger.cc  GraphContigger.hpp  GraphEditor.cc  GraphEditor.hpp  GraphMaker.cc  GraphMaker.hpp  GraphPatcher.cc  GraphPatcher.hpp  HaplotypeConsensus.cc  HaplotypeConsensus.hpp  HappySorter.cc  HappySorter.hpp  KmerCompressionIndex.cc  KmerCompressionIndex.hpp  LineFiller.cc  LineFiller.h  LinkageMaker.cc  LinkageMaker.hpp  LinkageUntangler.cc  LinkageUntangler.hpp  LocalHaplotypeAssembler.cc  LocalHaplotypeAssembler.hpp  PathExplorer.cc  PathExplorer.hpp  PathFinder.cc  PathFinder.hpp  RTGClassifier.cc  RTGClassifier.hpp  RTGCluster.cc  RTGCluster.hpp  RTGPartition.cc  RTGPartition.hpp  Strider.cc  Strider.hpp  ThreadAndPopper.cc  ThreadAndPopper.hpp  ThreadedGraphSorter.cc  ThreadedGraphSorter.h  (+4 more)
src/sdglib/readers/: FileReader.hpp  README.md  SequenceGraphReader.hpp
src/sdglib/types/: GenericTypes.hpp  KmerTypes.hpp  MappingTypes.hpp  hashing_helper.hpp
src/sglib/: ContigBlocks.h  FileReader.h  GraphDrawer.cpp  GraphDrawer.h  GraphPartitioner.cc  GraphPartitioner.hpp  HaplotypeScorer.cpp  HaplotypeScorer.hpp  KMerFactory.h  KMerIDX.h  KmerCompressionIndex.cc  KmerCompressionIndex.hpp  LinkageDiGraph.cc  LinkageDiGraph.hpp  PairedReadMapper.cc  PairedReadMapper.h  PairedReadMapper.hpp  PhaseScaffolder.cpp  PhaseScaffolder.h  README.md  ReadMapper10X.cpp  ReadMapper10X.h  SMR.h  SMR.hpp  Scaffolder.cc  Scaffolder.hpp  SequenceGraph.cc  SequenceGraph.h  SequenceGraph.hpp  SequenceGraphJournal.cc  SequenceGraphJournal.hpp  SequenceMapper.cpp  SequenceMapper.h  SequenceNode.cc  SequenceNode.hpp  SequenceThreader.cpp  SequenceThreader.h  UniqueKmerIndex.cpp  UniqueKmerIndex.h  Version.hpp  (+3 more)
tests/datasets/: test.fasta  test.fastq  test.paths
tests/sdglib/: batchCounter_tests.cc  files_tests.cc  files_tests.cpp  index_tests.cc  index_tests.cpp  workspace_tests.cc
tests/sglib/: basic_check.cc  catch-main.cpp  files_tests.cpp  index_tests.cpp  kmerfactory_tests.cpp  smr_tests.cpp
(+181 files in other folders)
